nodejs/versioned_docs/version-1.14/api/class-response.mdx
---
id: class-response
title: "Response"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

[Response] class represents responses which are received by page.


- [response.body()](./api/class-response.mdx#response-body)
- [response.finished()](./api/class-response.mdx#response-finished)
- [response.frame()](./api/class-response.mdx#response-frame)
- [response.headers()](./api/class-response.mdx#response-headers)
- [response.json()](./api/class-response.mdx#response-json)
- [response.ok()](./api/class-response.mdx#response-ok)
- [response.request()](./api/class-response.mdx#response-request)
- [response.securityDetails()](./api/class-response.mdx#response-security-details)
- [response.serverAddr()](./api/class-response.mdx#response-server-addr)
- [response.status()](./api/class-response.mdx#response-status)
- [response.statusText()](./api/class-response.mdx#response-status-text)
- [response.text()](./api/class-response.mdx#response-text)
- [response.url()](./api/class-response.mdx#response-url)

## response.body() {#response-body}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-body-return"/> &#60;[Promise]<[Buffer]>&#62;<a href="#response-body-return" class="list-anchor">#</a>

Returns the buffer with response body.

## response.finished() {#response-finished}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-finished-return"/> &#60;[Promise]<[null]|[Error]>&#62;<a href="#response-finished-return" class="list-anchor">#</a>

Waits for this response to finish, returns failure error if request failed.

## response.frame() {#response-frame}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-frame-return"/> &#60;[Frame]&#62;<a href="#response-frame-return" class="list-anchor">#</a>

Returns the [Frame] that initiated this response.

## response.headers() {#response-headers}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-headers-return"/> &#60;[Object]<[string], [string]>&#62;<a href="#response-headers-return" class="list-anchor">#</a>

Returns the object with HTTP headers associated with the response. All header names are lower-case.

## response.json() {#response-json}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-json-return"/> &#60;[Promise]<[Serializable]>&#62;<a href="#response-json-return" class="list-anchor">#</a>

Returns the JSON representation of response body.

This method will throw if the response body is not parsable via `JSON.parse`.

## response.ok() {#response-ok}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-ok-return"/> &#60;[boolean]&#62;<a href="#response-ok-return" class="list-anchor">#</a>

Contains a boolean stating whether the response was successful (status in the range 200-299) or not.

## response.request() {#response-request}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-request-return"/> &#60;[Request]&#62;<a href="#response-request-return" class="list-anchor">#</a>

Returns the matching [Request] object.

## response.securityDetails() {#response-security-details}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-security-details-return"/> &#60;[Promise]<[null]|[Object]>&#62;<a href="#response-security-details-return" class="list-anchor">#</a>
  - `issuer` &#60;[string]&#62; Common Name component of the Issuer field. from the certificate. This should only be used for informational purposes. Optional.
  - `protocol` &#60;[string]&#62; The specific TLS protocol used. (e.g. `TLS 1.3`). Optional.
  - `subjectName` &#60;[string]&#62; Common Name component of the Subject field from the certificate. This should only be used for informational purposes. Optional.
  - `validFrom` &#60;[number]&#62; Unix timestamp (in seconds) specifying when this cert becomes valid. Optional.
  - `validTo` &#60;[number]&#62; Unix timestamp (in seconds) specifying when this cert becomes invalid. Optional.

Returns SSL and other security information.

## response.serverAddr() {#response-server-addr}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-server-addr-return"/> &#60;[Promise]<[null]|[Object]>&#62;<a href="#response-server-addr-return" class="list-anchor">#</a>
  - `ipAddress` &#60;[string]&#62; IPv4 or IPV6 address of the server.
  - `port` &#60;[number]&#62;

Returns the IP address and port of the server.

## response.status() {#response-status}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-status-return"/> &#60;[number]&#62;<a href="#response-status-return" class="list-anchor">#</a>

Contains the status code of the response (e.g., 200 for a success).

## response.statusText() {#response-status-text}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-status-text-return"/> &#60;[string]&#62;<a href="#response-status-text-return" class="list-anchor">#</a>

Contains the status text of the response (e.g. usually an "OK" for a success).

## response.text() {#response-text}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-text-return"/> &#60;[Promise]<[string]>&#62;<a href="#response-text-return" class="list-anchor">#</a>

Returns the text representation of response body.

## response.url() {#response-url}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-url-return"/> &#60;[string]&#62;<a href="#response-url-return" class="list-anchor">#</a>

Contains the URL of the response.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
